src/containers/Testing/TestingSidebar.css
#TestSidebar {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: 8;
  display: flex;
  flex-direction: column;
  width: 400px;
  height: 100%;
  background-color: #fff;
  border-left: 1px solid #e2e9ec;
  transform: translateX(400px);
  transition: transform 0.3s;
  user-select: none;
}

#TestSidebar .dialog_container {
  display: flex;
  flex: 1;
  flex-direction: column;
}

#TestSidebar .dialog_container .collapse {
  flex: 1;
}

#Timeline {
  position: relative;
  display: flex;
  flex-direction: column;
  height: 100%;
}

#TestReset {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 100%;
  padding-bottom: 100px;
  text-align: center;
}

#TestSidebar.open {
  z-index: 20;
  overflow: hidden;
  transform: none !important;
}

#TestSettings {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: 7;
  display: flex;
  flex-direction: column;
  width: 300px;
  height: 100%;
  background: #fff;
  border-left: 1px solid #e2e9ec;
  transform: translateX(300px);
  transition: transform 0.6s;
}

#TestVariables {
  flex: 1;
  padding: 15px 20px;
  overflow-y: scroll;
}

.test-variable.editor {
  display: flex;
  flex-grow: 0;
  width: 100%;
  height: auto;
  margin-bottom: 10px;
  padding: 7px 8px;
}

.test-variable.editor:focus-within {
  border-color: #4668f3 !important;
}

.test-variable .variable_tag {
  margin: 0;
  padding: 2px 5px !important;
}

.test-variable input {
  flex: 1;
  min-width: 0;
  margin-left: 8px;
  color: #132144;
}

#TestSettings.open {
  z-index: 10;
  transform: translateX(-400px);
}

#TestInputContainer {
  width: 100%;

  /* padding: 20px 15px; */
  text-align: left;
}

#TestInput {
  padding: 0 20px 25px 20px;
}

#TestInput > textarea {
  width: 100%;
  min-height: 63px;

  /* margin-bottom: 5px; */
}

#Conditions {
  max-height: 300px;
  overflow-y: scroll;
}

.dialog {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.session-break {
  position: absolute;
  top: 0;
  left: 50%;
  margin-left: -65px;
}

.condition-label {
  display: flex;
  align-items: center;
  justify-content: space-between;
  min-height: 62px;
  padding: 10px 25px 10px 20px;
  text-align: center;
  background: -webkit-linear-gradient(rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
  background-image: -moz-linear-gradient(rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
  background-image: -o-linear-gradient(rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
  background-image: linear-gradient(rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
  background-image: -ms-linear-gradient(rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
}

.condition-label.centered {
  justify-content: center;
  padding-right: 20px;
}

.condition-label label {
  display: inline-block;
  text-transform: uppercase;
}

.response-input {
  min-height: 100px;
}

.choice-options {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}

.choice-option {
  color: #62778c;
}

.choice-option:hover {
  color: #5d9df5;
  cursor: pointer;
}

.expression-add {
  font-weight: normal;
  background-image: url(/expression-add.svg);
  background-repeat: no-repeat;
  background-repeat: no-repeat;
  background-position: center;
  border: none;
  cursor: pointer;
}

.expression-button {
  width: 23px;
  height: 23px;
  background-size: 16px;
}

.expression-remove {
  margin-right: 5px;
  font-weight: normal;
  background-image: url(/expression-minus.svg);
  background-repeat: no-repeat;
  background-repeat: no-repeat;
  background-position: center;
  border: none;
  cursor: pointer;
}

.expression-container {
  width: 80%;
}

.expression-control {
  display: flex;
  justify-content: center;
  width: 20%;
}

#SpeechBar {
  position: fixed;
  right: 0;
  bottom: 0;
  left: 0;
  display: flex;
  align-items: center;
  width: 600px;
  margin: 0 auto;
  padding: 15px 55px 15px 55px;
  color: #fff9;
  background: linear-gradient(#344161, #263353);
  border-bottom: 1px solid #000 !important;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  transition: transform 0.2s;
}

#SpeechBar.listening {
  transform: scale(1.02);
}

#SpeechBar > .speech-icon {
  position: absolute;
  top: 10px;
  left: 20px;
  padding: 5px 10px;
  color: inherit;
  background-color: transparent;
  border: none;
}

#SpeechBar.listening > .speech-icon {
  color: #fff;
}

#SpeechBar.listening.microphone > .speech-icon::before {
  position: absolute;
  top: 3px;
  right: 5px;
  width: 10px;
  height: 10px;
  background-color: red;
  border: 2px solid #263353;
  border-radius: 10px;
  animation: flickerAnimation 1s infinite;
  content: ' ';
}

@media screen and (max-width: 1760px) {
  #SpeechBar {
    width: 500px;
    margin: 0 auto;
    padding-left: 20px;
  }

  #SpeechBar .text-center {
    margin-left: 30px;
  }
}

@media screen and (max-width: 1360px) {
  #SpeechBar {
    right: 430px;
    left: auto;
  }
}

@keyframes flickerAnimation {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

td {
  padding: 0 15px 0 0;
}

.test-modal {
  padding-top: 0;
  padding-bottom: 0;

  /*    height: 508px; */
}

.test-modal > .row {
  height: 100%;
}

.message-container,
.self-message {
  display: flex;
  align-items: flex-end;
  margin-top: 10px;
}

.message {
  position: relative;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  display: inline-flex;
  align-items: flex-start;
  max-width: 100%;
  padding: 0.5rem;
  overflow: hidden;
  text-align: left;
  word-break: break-word;
  border: 1px solid #dee2e6;
  border-radius: 15px 15px 15px 5px !important;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
}

.speak-box-icon {
  width: 18px;
  min-width: 18px;
  height: 18px;
  min-height: 18px;
  margin-right: 8px;
  margin-bottom: 2px;
}

.self-message {
  justify-content: flex-end;
  text-align: right;
}

.self-message > .speak-box-icon {
  margin-right: 0;
  margin-left: 8px;
}

.self-message > .message {
  align-items: flex-end;
  text-align: right;
  background-color: #fff;
  border-radius: 15px 15px 5px 15px !important;
  -webkit-box-align: end;
  -ms-flex-align: end;
}

.chatbox {
  position: absolute;
  display: flex;
  flex: 1;
  flex-direction: column-reverse;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  padding: 0 20px;
  overflow-y: auto;
}

.chat-container {
  position: relative;
  display: flex;
  flex: 1;
  flex-direction: column;
  width: 100%;
  border-top: 1px solid #8da2b545;
}

.var-table {
  table-layout: fixed;
}

.var-table td,
.var-table th {
  padding: 8px 0;
  font-size: 0.8rem;
  vertical-align: middle;
  word-wrap: break-word; /* All browsers since IE 5.5+ */
  overflow-wrap: break-word; /* Renamed property in CSS3 draft spec */
}

.var-table td.v > span {
  padding: 4px;
  color: #fff;
  background-color: #3d96f0;
  border-radius: 0.25rem;
}

.test-main {
  border-right: 1px solid #e9ecef;
}

.test-sidebar {
  display: flex;
  flex-direction: column;
  height: 100%;
  padding-top: 10px;
  padding-bottom: 10px;
}

.test-sidebar p.list-group-item {
  padding: 10px 5px;
  color: #8da2b5;
  font-size: 15px;
}

.test-sidebar h4 {
  margin-bottom: 0;
  color: #2b3950;
}

.modal-title {
  color: #8da2b5;
  font-weight: 500;
  font-size: 16px;
  text-transform: uppercase;
}

.debug-switch {
  padding-bottom: 10px;
  color: #2b3950;
  border-bottom: 1px solid #e9ecef;
}

.sidebar-scroll {
  overflow-y: scroll;
}

.debug {
  padding: 2px 8px !important;
  color: #000;
  background-color: #f3f3f3;
}

.debug small {
  margin: 0;
  text-transform: uppercase;
}

.debug p {
  margin-top: -8px;
  margin-bottom: 2px;
}

.debug-headers {
  font-weight: bold;
}

.variable-header {
  font-weight: bold;
}

.variables-table {
  height: 100px;
  overflow: auto;
}

.chats {
  width: 100%;
  padding-bottom: 20px;
}

.tag-span {
  color: #0095f7;

  /* font-style: italic; */
  font-size: 14px;
  text-decoration: underline;

  /* font-weight: bold; */
}

.tag-wrap {
  padding: 2px 4px;
  background-color: rgba(0, 149, 247, 0.2);
  border-radius: 4px;
}

.audioplayer-options {
  display: flex;
  padding: 0 10px;
}

.audioplayer-options > button {
  flex: 1;
  margin: 0 5px;
}

.message-progress {
  position: absolute;
  z-index: 9;
  height: 110%;
  background-color: #eee;
  -webkit-transition: width 1s; /* For Safari 3.1 to 6.0 */
  transition: width 1s;
}

